testsuite/bsc.typechecker/typeclasses/ATFWrongArity.bs.bsc-out.expected
checking package dependencies
compiling ATFWrongArity.bs
Error: "ATFWrongArity.bs", line 16, column 8: (T0025)
  The type `Elem' is applied to too few arguments.
